# Analysis

./: .dir-locals.el  .gitignore  CMakeLists.txt  GNUmakefile  README.md
doc/: CLI.rst  Makefile  Topology.rst  (+2 more)
process/: CMakeLists.txt
process/Decoder/: Decoder.cc  Decoder.d  Decoder.rst  GNUmakefile
process/IngDisp/: GNUmakefile  IngDisp.cc  IngDisp.cpp
process/wgAnaHist/: CMakeLists.txt  GNUmakefile  libwgAnaHist.cc  libwgAnaHist.cpp  wgAnaHist.cc  wgAnaHist.cpp  wgAnaHist.rst
process/wgAnaHist/unit_tests/: GNUmakefile  test_ana_hist_inputDAC121_pe2_dif_1_1_1.bash
process/wgAnaHistSummary/: CMakeLists.txt  GNUmakefile  libwgAnaHistSummary.cc  libwgAnaHistSummary.cpp  wgAnaHistSummary.cc  wgAnaHistSummary.cpp  wgAnaHistSummary.rst
process/wgAnaHistSummary/unit_tests/: GNUmakefile  test_ana_hist_summary_inputDAC121_pe2_dif_1_1_1.bash
process/wgAnaPedestal/: CMakeLists.txt  GNUmakefile  libwgAnaPedestal.cc  libwgAnaPedestal.cpp  wgAnaPedestal.cc  wgAnaPedestal.cpp  wgAnaPedestal.rst
process/wgAnaPedestal/unit_tests/: GNUmakefile  test_ana_pedestal_inputDAC121_pe2_dif_1_1_1.bash
process/wgAnaPedestalSummary/: CMakeLists.txt  GNUmakefile  libwgAnaPedestalSummary.cc  libwgAnaPedestalSummary.cpp  wgAnaPedestalSummary.cc  wgAnaPedestalSummary.cpp  wgAnaPedestalSummary.rst
process/wgAnaPedestalSummary/unit_tests/: GNUmakefile  test_ana_pedestal_summary_inputDAC121_pe2_dif_1_1_1.bash
process/wgAnalyze/: GNUmakefile  wgAnalyze.cc  wgAnalyze.cpp
process/wgBsdSpillCheck/: GNUmakefile  wgBsdSpillCheck.cpp
process/wgCalib/: GNUmakefile  wgCalib.cc  wgCalib.cpp
process/wgCalibDiff/: GNUmakefile  wgCalibDiff.cc  wgCalibDiff.cpp
process/wgChangeConfig/: CMakeLists.txt  GNUmakefile  libwgChangeConfig.cc  libwgChangeConfig.cpp  wgChangeConfig.cc  wgChangeConfig.cpp  wgChangeConfig.rst
process/wgChangeConfig/unit_tests/: output.txt  print_bitstream.bash  set_chipid.bash  set_gain_select.bash  set_inputdac.bash  set_inputdac_reference.bash  set_preamp.bash  set_threshold.bash  test_bitstream.txt
process/wgCheckData/: GNUmakefile  wgCheckData.cc  wgCheckData.cpp
process/wgDQCheck/: CMakeLists.txt  GNUmakefile  libwgDQCheck.cpp  wgDQCheck.cc  wgDQCheck.cpp
process/wgDQHistory/: GNUmakefile  wgDQHistory.cc  wgDQHistory.cpp
process/wgDecoder/: CMakeLists.txt  GNUmakefile  libwgDecoder.cc  libwgDecoder.cpp  libwgDecoderOld.cpp  libwgDecoderReader.cpp  libwgDecoderSeeker.cpp  libwgDecoderUtils.cpp  wgDecoder.cc  wgDecoder.cpp  wgDecoder.hpp  wgDecoder.rst  wgDecoderUtils.tpp  wgRawEmulator.cpp
process/wgDecoder/unit_tests/: CMakeLists.txt  python_ctypes.py  test_decoder.bash  test_decoder_utils.cpp  test_raw_data.cpp
process/wgEvtDisp/: B2Disp.cc  B2Disp.cpp  GNUmakefile  wgEvtDisp.cc  wgEvtDisp.cpp  wgEvtDisp.d
process/wgGainCalib/: CMakeLists.txt  libwgGainCalib.cpp  wgGainCalib.cpp  wgGainCalib.rst
process/wgGainCalibUgly/: CMakeLists.txt  libwgGainCalibUgly.cpp  wgGainCalibUgly.cpp
process/wgGainCheck/: GNUmakefile  wgGainCheck.cc  wgGainCheck.cpp
process/wgHitEff/: GNUmakefile  wgHitEff.cc  wgHitEff.cpp  wgHitEff.d
process/wgHitTimeCheck/: GNUmakefile  job_submit.sh  wgHitTimeCheck.cc  wgHitTimeCheck.cpp
process/wgHough/: GNUmakefile  wgHough.cc  wgHough.cpp  wgHough.d
process/wgMakeHist/: CMakeLists.txt  GNUmakefile  libwgMakeHist.cc  libwgMakeHist.cpp  wgMakeHist.cc  wgMakeHist.cpp  wgMakeHist.rst
process/wgMakeHist/unit_tests/: Makefile  test_contiguous_vectors.cc  test_contiguous_vectors.cpp  test_inputDAC121_pe2_dif_1_1_1.bash
process/wgOnlineMonitor/: CMakeLists.txt  Makefile  libwgOnlineMonitor.cpp  om_wagasci.cpp  om_wagasci.hpp  wgOnlineMonitor.cpp  wgOnlineMonitor.hpp
process/wgOnlineMonitor/unit_tests/: offline_run.sh
process/wgOptimize/: CMakeLists.txt  GNUmakefile  libwgOptimize.cc  libwgOptimize.cpp  wgOptimize.cc  wgOptimize.cpp  wgOptimize.rst
process/wgOptimize/unit_tests/: calibration_card.xml  optimize_inputdac.bash  optimize_inputdac_1pe.bash  optimize_inputdac_2pe.bash  optimize_inputdac_3pe.bash  optimize_threshold.bash  optimize_threshold_121idac_1pe.bash  optimize_threshold_121idac_2pe.bash  optimize_threshold_121idac_3pe.bash  threshold_card.xml  wagasci_config.xml  wagasci_config_6asu.xml  wagasci_config_dif1_chip1.origin.txt  wagasci_config_dif1_chip2.origin.txt  wagasci_config_gdcc1_dif1_chip1.txt  wagasci_config_gdcc1_dif1_chip3.txt
process/wgPedestalCalib/: CMakeLists.txt  libwgPedestalCalib.cpp  wgPedestalCalib.cpp  wgPedestalCalib.rst
process/wgPreCalib/: CMakeLists.txt  GNUmakefile  libwgPreCalib.cc  libwgPreCalib.cpp  wgPreCalib.cc  wgPreCalib.cpp  wgPreCalib.rst
process/wgRawEmulator/: CMakeLists.txt  libwgRawEmulator.cpp
process/wgRecon/: GNUmakefile  wgRecon.cc  wgRecon.cpp
process/wgReconDisp/: GNUmakefile  wgReconDisp.cc  wgReconDisp.cpp
process/wgScurve/: CMakeLists.txt  GNUmakefile  libwgScurve.cpp  wgScurve.cc  wgScurve.cpp  wgScurve.rst
process/wgScurveSummary/: CMakeLists.txt  GNUmakefile  libwgScurveSummary.cpp  wgScurveSummary.cc  wgScurveSummary.cpp  wgScurveSummary.rst
process/wgSpillCheck/: GNUmakefile  wgSpillCheck.cc  wgSpillCheck.cpp
process/wgSpillEff/: GNUmakefile  wgSpillEff.cc  wgSpillEff.cpp
src/: CMakeLists.txt  Const.cc  Const.cpp  DetectorConst.cc  DetectorConst.cpp  wgChannelMap.cc  wgChannelMap.cpp  wgChannelMapNew.cpp.backup  wgChannelMapOld.cpp.backup  wgColor.cpp  wgConst.cpp  wgDetectorConst.cpp  wgDetectorConstOld.cpp.backup  wgDetectorDimension.cc  wgDetectorDimension.cpp  wgDisp.cc  wgDisp.cpp  wgDisp.cpp.backup  wgEditConfig.cc  wgEditConfig.cpp  wgEditXML.cc  wgEditXML.cpp  wgEnableThreadSafety.cpp  wgEnvironment.cpp  wgErrorCode.cc  wgErrorCode.cpp  wgFileSystemTools.cpp  wgFit.cc  wgFit.cpp  wgFitConst.cc  wgFitConst.cpp  wgGetCalibData.cc  wgGetCalibData.cpp  wgGetHist.cc  wgGetHist.cpp  wgGetTree.cc  wgGetTree.cpp  wgLogger.cpp  wgNumericTools.cpp  wgRawData.cpp  (+5 more)
src/unit_tests/: GNUmakefile  utConst.cpp  utContiguousVectors.cpp  utEditXML  utEditXML.cpp  utFit.cpp  utRawData.cpp  utTopology  utTopology.cpp  utTopology.py  wagasci_config.xml
(+97 files in other folders)
