add_subdirectory(wgDecoder)
add_subdirectory(wgMakeHist)
add_subdirectory(wgAnaHist)
add_subdirectory(wgAnaHistSummary)
add_subdirectory(wgAnaPedestal)
# add_subdirectory(wgChangeConfig)
add_subdirectory(wgOptimize)
# add_subdirectory(wgPreCalib)
# add_subdirectory(wgScurve)
# add_subdirectory(wgScurveSummary)
