add_subdirectory(wgDecoder)
add_subdirectory(wgMakeHist)
add_subdirectory(wgAnaHist)
add_subdirectory(wgAnaHistSummary)
add_subdirectory(wgPedestalCalib)
add_subdirectory(wgChangeConfig)
add_subdirectory(wgOptimize)
add_subdirectory(wgGainCalib)
add_subdirectory(wgScurve)
add_subdirectory(wgOnlineMonitor)
